fix autocomplete; fix hamburger menu in header for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ button {
 }
 
 button:hover {
-  border-color: var(--apricot);
+  border-color: var(--red);
 }
 
 button:focus,
@@ -113,6 +113,8 @@ button:focus-visible {
 }
 
 }
+
+
  /* styles for the main map element */
 .map {
   min-width:auto;
@@ -149,13 +151,14 @@ button:focus-visible {
   background-color: var(--cream);
   border-bottom: solid .1em rgba(0,0,0,0.43);
 }
+
 /* search input on home page */
 .search {
-  background: #FFFFFF;
   box-shadow: 1px 2px 16px -4px rgba(0,0,0,0.43);
   -webkit-box-shadow: 1px 2px 16px -4px rgba(0,0,0,0.43);
   -moz-box-shadow: 1px 2px 16px -4px rgba(0,0,0,0.43);
 }
+
 /* location button on home page */
 .location-btn {
   color: var(--cream);
@@ -166,9 +169,13 @@ button:focus-visible {
 }
 
 /* hamburger menu */
-/* .hamburger {
+.hamburger {
   color: var(--cyan);
-} */
+}
+
+.x-icon {
+  z-index: 99;
+}
 
 .floating-in {
   position: absolute;
@@ -187,7 +194,7 @@ button:focus-visible {
     opacity: 0;
   }
   100% {
-    top: 0px; 
+    top: -15px; 
     opacity: 1;
   }
 }
